feat: show local time for each city

--- a/src/components/WeatherTile.css
+++ b/src/components/WeatherTile.css
@@ -83,6 +83,10 @@
   margin-top: 3px;
 }
 
+.tile-local-time {
+  font-variant-numeric: tabular-nums;
+}
+
 /* Loading */
 .tile-loading {
   display: flex;
